[tool.poetry]
name = "albert-model-trainer"
version = "0.1.5"
description = "A library for doing automatic model training and hyperparameter tuning of various types of ML models"
authors = ["Jonathan Welch <jonathan@albertinvent.com>"]
readme = "README.md"
packages = [{ include = "albert_model_trainer", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
numpy = "^1.24.3"
scikit-learn = "^1.3.0"
ray = { version = "^2.6.3", extras = ["tune"] }
matplotlib = "^3.7.2"
loguru = "^0.7.0"
tqdm = "^4.66.1"
hyperopt = "^0.2.7"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
